# gnxi

./: .gitignore  .travis.yml  README.md  doc.go  go.mod  go.sum  profile.out  test.sh
oc_config_validate/: .gitignore  CONTRIBUTING.md  README.md  lint.sh  requirements.txt  setup.cfg  setup.py
oc_config_validate/demo/: Dockerfile  README.md  config_results.json  config_tests.yaml  init_config.json  results.json  run_demo.sh  system_hostname_config.json  target_config.json  telemetry_results.json  telemetry_tests.yaml  tests.yaml
oc_config_validate/demo/certs/: .gitignore  create_certs.sh
oc_config_validate/docker/: Dockerfile  README.md
oc_config_validate/docs/: custom_model.md  oc_models.md  testcases.md  testclasses.md  tests.md  vendor_testing.md
oc_config_validate/init_configs/: ap.json  example.json  fmt_json.sh  interfaces.json  openflow.json  routing_instance.json  routing_instance_bgp.json  subif_static_ip.json  system.json
oc_config_validate/oc_config_validate/: .gitignore  __init__.py  __main__.py  context.py  formatter.py  runner.py  schema.py  target.py  target_test.py  testbase.py  update_models.sh
oc_config_validate/oc_config_validate/gnmi/: gnmi_ext_pb2.py  gnmi_pb2.py  gnmi_pb2_grpc.py  make_gnmi_proto_py.sh
oc_config_validate/oc_config_validate/models/: __init__.py  acl.py  aft.py  ate.py  bfd.py  bgp.py  catalog.py  defined_sets.py  devices_manifest.py  ethernet_segments.py  extensions.py  firewall.py  flex_algo.py  gnpsi.py  gnsi.py  gribi.py  grpc.py  interfaces.py  isis.py  keychain.py  lacp.py  lldp.py  local_routing.py  macsec.py  mpls.py  multicast.py  oam.py  openflow.py  optical_transport.py  ospf.py  p4rt.py  pcep.py  platform.py  policy.py  policy_forwarding.py  probes.py  ptp.py  relay_agent.py  rib.py  sampling.py  (+7 more)
oc_config_validate/py_tests/: schema_test.py  test_runner.py  test_schema.py
oc_config_validate/results/: ap_telemetry.json
oc_config_validate/tests/: ap.yaml  ap_telemetry.yaml  bgp.yaml  example_ap.yaml  interfaces.yaml  lldp.yaml  openflow.yaml  static_routes.yaml  static_routes_gnmi.yaml  static_routes_setget.yaml  subif-ip.yaml  subif-ip_setget.yaml  system.yaml
(+1520 files in other folders)
