[metadata]
name = oc_config_validate
version = 1.0.0
description = Validate OpenConfig-based configuration of devices.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
  oc_config_validate = oc_config_validate
packages = find:

python_requires = >=3.6

install_requires =
    grpcio
    grpcio-tools
    pyang==2.5.0
    pyangbind==0.8.1
    PyYAML==5.4.1
    retry

[options.packages.find]
include = oc_config_validate,oc_config_validate.*