[metadata]
name = oc_config_validate
version = attr: oc_config_validate.__version__
description = Validate OpenConfig-based configuration of devices.
long_description_content_type = text/markdown
long_description = file: README.md
license = Apache License, Version 2.0
author = Jose Ignacio Tamayo, Xavier Contreras Acevedo
author_email = jose.ignacio.tamayo@gmail.com, xavierc@google.com
url = https://github.com/google/gnxi/oc_config_validate
classifiers =
   Programming Language :: Python :: 3
   License :: OSI Approved :: Apache Software License
   Operating System :: OS Independent

[options]
python_requires = >=3.9
install_requires =
    grpcio
    grpcio-tools
    pyang
    pyangbind>=0.8.3
    PyYAML
    retry
packages = find:
